--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -59,7 +59,12 @@ header {
     font-family: 'Inter', sans-serif;
     font-size: 88px;
     font-weight: 700;
+    margin-top: 80px;
 
+}
+
+h3{
+    text-align:center ;
 }
 
 .comment {
@@ -99,12 +104,17 @@ header {
 }
 
 .section2 {
-    background-image: url('../resources/Vectorrr.png');
+    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(../resources/Vectorrr.png);
+    /* background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%) url(../resources/Vectorrr.png); */
     max-width: 1320px;
     height: 600px;
     width: 82.5%;
     margin: 80px auto;
 }
+
+/* background-image: url('../resources/Vectorrr.png'); */
+/* background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(../resources/Banner.png); */
+
 
 .section2p {
     width: 697px;
@@ -114,22 +124,24 @@ header {
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-.twice{
-    margin-left: 138px;
+
+    .twice {
+        width: 642px;
 
     }
 }
-.flex{
+
+.flex {
     display: flex;
-   
 
 }
 
-.combined{
-   
+.combined {
+    margin: 124px 138px 0 124px;
+
 }
 
-.sec2img{
+.sec2img {
     display: flex;
     width: 319.83px;
     height: 464.662px;
@@ -138,5 +150,51 @@ header {
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    margin: 68px;
+
+}
+
+.four {
+    max-width: 1320px;
+    max-height: 482px;
+    flex-shrink: 0;
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    padding: 100px 386px 126px 385px;
+}
+
+.add {
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background: transparent;
+    margin-left: 158px;
+    margin-top: 48px;
+}
+
+span {
+    color: red;
+}
+
+.step1 {
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    text-transform: capitalize;
+    /* padding: 100px 385px 0 185px; */
+}
+
+.go {
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: #F00;
+    border: none;
+    
 }
